--- a/a_tech.html
+++ b/a_tech.html
@@ -17,33 +17,86 @@
     </style>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">GadgetRx</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li id="home" class="nav-item">
+            <a class="nav-link" href="admin.html">Home</a>
+          </li>
+          <li id="user" class="nav-item">
+            <a class="nav-link" href="a_user.html">Users</a>
+          </li>
+          <li id="shop" class="nav-item">
+            <a class="nav-link" href="a_shop.html">Shops</a>
+          </li>
+          <!-- <li id="technicians" class="nav-item">
+            <a class="nav-link" href="a_tech.html">Technicians</a>
+          </li> -->
+          <li id="messages" class="nav-item">
+            <a class="nav-link" href="a_chat.html">Messages</a>
+          </li>
+          <li id="comments" class="nav-item">
+            <a class="nav-link" href="a_comment.html">Comments</a>
+          </li>
+          <li id="reviews" class="nav-item">
+            <a class="nav-link" href="a_reviews.html">Review</a>
+          </li>
+          <li id="appointment" class="nav-item">
+            <a class="nav-link" href="a_appoinment.html">Appointment</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="container mt-5">
       <h1 class="text-center mb-4">Manage Technicians</h1>
 
       <!-- Add Technician Form -->
       <form id="technicianForm" class="mb-4">
-        <div class="mb-3">
-          <label for="shop_username" class="form-label">Shop Username</label>
-          <input type="text" class="form-control" id="shop_username" required />
+        <div class="row">
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="shop_username" class="form-label"
+                >Shop Username</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="shop_username"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="tech_username" class="form-label"
+                >Technician Username</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="tech_username"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="tech_des" class="form-label"
+                >Technician Description</label
+              >
+              <input type="text" class="form-control" id="tech_des" />
+            </div>
+            <div class="mb-3">
+              <label for="tech_qul" class="form-label"
+                >Technician Qualification</label
+              >
+              <input type="text" class="form-control" id="tech_qul" required />
+            </div>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="tech_username" class="form-label"
-            >Technician Username</label
-          >
-          <input type="text" class="form-control" id="tech_username" required />
-        </div>
-        <div class="mb-3">
-          <label for="tech_des" class="form-label"
-            >Technician Description</label
-          >
-          <input type="text" class="form-control" id="tech_des" />
-        </div>
-        <div class="mb-3">
-          <label for="tech_qul" class="form-label"
-            >Technician Qualification</label
-          >
-          <input type="text" class="form-control" id="tech_qul" required />
-        </div>
+
         <button type="submit" class="btn btn-primary">Add Technician</button>
       </form>
 
