--- a/dashboard_user.html
+++ b/dashboard_user.html
@@ -143,8 +143,8 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="index.html" class="nav-item nav-link">Home</a>
-         
           <a href="setting_user.html" class="nav-item nav-link">Setting</a>
+          <a href="/logout" class="nav-item nav-link">Logout</a>
         </div>
       </div>
     </nav>
