--- a/signup_user.html
+++ b/signup_user.html
@@ -41,8 +41,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDx78wjiGh46Ei1oL-9b8M1-5zogF1VXs&libraries=places"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDx78wjiGh46Ei1oL-9b8M1-5zogF1VXs&libraries=places"></script> -->
     <style>
       #map {
         width: 100%;
@@ -360,83 +361,77 @@
     <script src="script/script_user.js"></script>
     <script>
       let map;
-      let geocoder;
+      let marker;
 
       function initMap() {
-        map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 15,
-        });
-        geocoder = new google.maps.Geocoder();
+        // Initialize Leaflet map
+        map = L.map('map').setView([51.505, -0.09], 15); // Default view
+
+        // Add OpenStreetMap tile layer
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
 
         // Get user's current location
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(
             (position) => {
-              const pos = {
-                lat: position.coords.latitude,
-                lng: position.coords.longitude,
-              };
-              map.setCenter(pos);
-              document.getElementById("latitude").value = pos.lat;
-              document.getElementById("longitude").value = pos.lng;
-              geocodeLatLng(geocoder, pos.lat, pos.lng);
+              const pos = [position.coords.latitude, position.coords.longitude];
+              map.setView(pos, 15);
+              document.getElementById("latitude").value = pos[0];
+              document.getElementById("longitude").value = pos[1];
+              geocodeLatLng(pos[0], pos[1]);
 
               // Add marker to the map at user's location
-              new google.maps.Marker({
-                position: pos,
-                map: map,
-              });
+              if (marker) {
+                marker.setLatLng(pos);
+              } else {
+                marker = L.marker(pos).addTo(map);
+              }
             },
             () => {
-              handleLocationError(true, map.getCenter());
+              handleLocationError(true);
             }
           );
         } else {
           // Browser doesn't support Geolocation
-          handleLocationError(false, map.getCenter());
+          handleLocationError(false);
         }
 
-        // Add event listener to update latitude and longitude input when map is clicked
-        map.addListener("click", function (event) {
-          let lat = event.latLng.lat();
-          let lng = event.latLng.lng();
+        // Add event listener to update latitude and longitude when map is clicked
+        map.on("click", function (event) {
+          let lat = event.latlng.lat;
+          let lng = event.latlng.lng;
           document.getElementById("latitude").value = lat;
           document.getElementById("longitude").value = lng;
-          geocodeLatLng(geocoder, lat, lng);
+          geocodeLatLng(lat, lng);
 
-          // Add marker to the map at the clicked location
-          new google.maps.Marker({
-            position: event.latLng,
-            map: map,
-          });
+          // Add or move marker to the clicked location
+          if (marker) {
+            marker.setLatLng([lat, lng]);
+          } else {
+            marker = L.marker([lat, lng]).addTo(map);
+          }
         });
       }
 
-      function geocodeLatLng(geocoder, lat, lng) {
-        const latlng = {
-          lat: parseFloat(lat),
-          lng: parseFloat(lng),
-        };
-        geocoder.geocode(
-          {
-            location: latlng,
-          },
-          (results, status) => {
-            if (status === "OK") {
-              if (results[0]) {
-                document.getElementById("address").value =
-                  results[0].formatted_address;
-              } else {
-                window.alert("No results found");
-              }
+      function geocodeLatLng(lat, lng) {
+        // Use Nominatim for reverse geocoding
+        fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lng}&format=json`)
+          .then(response => response.json())
+          .then(data => {
+            if (data && data.display_name) {
+              document.getElementById("address").value = data.display_name;
             } else {
-              window.alert("Geocoder failed due to: " + status);
+              window.alert("No results found");
             }
-          }
-        );
+          })
+          .catch(error => {
+            window.alert("Geocoding failed due to: " + error);
+          });
       }
 
-      function handleLocationError(browserHasGeolocation, pos) {
+      function handleLocationError(browserHasGeolocation) {
         window.alert(
           browserHasGeolocation
             ? "Error: The Geolocation service failed."
@@ -444,7 +439,7 @@
         );
       }
 
-      initMap();
+      initMap(); // Initialize the map
     </script>
   </body>
 </html>
