--- a/search_shop.html
+++ b/search_shop.html
@@ -141,6 +141,7 @@
           <a href="index.html" class="nav-item nav-link">Home</a>
           <a href="dashboard_user.html" class="nav-item nav-link">Dashboard</a>
           <a href="setting_user.html" class="nav-item nav-link">Setting</a>
+          <a href="/logout" class="nav-item nav-link">Logout</a>
         </div>
       </div>
     </nav>
@@ -155,6 +156,7 @@
               <h5 class="card-title fw-semibold mb-4">Search</h5>
               <div class="row">
                 <div class="col-md-8 mb-3">
+                  <input type="text" class="form-control" id="username" name="" hidden>
                   <input type="text" class="form-control" id="shopType" name="shopType">
                   <small class="form-text text-muted">Mobile Shop/ Laptop Repair etc.</small>
                 </div>
