--- a/a_tech.html
+++ b/a_tech.html
@@ -48,6 +48,9 @@
           <li id="appointment" class="nav-item">
             <a class="nav-link" href="a_appoinment.html">Appointment</a>
           </li>
+          <li id="logout" class="nav-item"></li>
+          <a href="/logout" class="nav-item nav-link">Logout</a>
+          </li>
         </ul>
       </div>
     </nav>
