--- a/dashboard_shop.html
+++ b/dashboard_shop.html
@@ -144,6 +144,7 @@
           <a href="index.html" class="nav-item nav-link">Home</a>
           <!-- <a href="#" onclick="shop(document.getElementById('username').value)" class="nav-item nav-link">Shop</a> -->
           <a href="setting_shop.html" class="nav-item nav-link">Setting</a>
+          <a href="/logout" class="nav-item nav-link">Logout</a>
         </div>
       </div>
     </nav>
