--- a/setting_user.html
+++ b/setting_user.html
@@ -100,6 +100,7 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="index.html" class="nav-item nav-link">Home</a>
           <a href="dashboard_user.html" class="nav-item nav-link">Dashboard</a>
+          <a href="/logout" class="nav-item nav-link">Logout</a>
         </div>
       </div>
     </nav>
